# feishu-sync-tool

./: .coze  .dockerignore  .env.example  .gitattributes  .gitignore  .vercelignore  ; pnpm tauri build  BUG_FIX_README.md  COMPLETE_FIX_SUMMARY.md  COUNTDOWN_AUTO_CLOSE_FEATURE.md  DEBUG_500_ERROR.md  DEBUG_GUIDE.md  DEBUG_SETTABLES.md  DEPLOYMENT_ENV_ISSUE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOY_ALIYUN.md  DEPLOY_VOLCENGINE.md  DESIGN_GUIDELINES.md  DIAGNOSIS_REPORT.md  Dockerfile  ENVIRONMENT_AUTO_DETECT.md  ENVIRONMENT_NOTICE_OPTIMIZATION.md  FIELD_MATCHING_DEBUG.md  FILE_RECOGNITION_MIGRATION.md  FINAL_DEPLOYMENT_CHECKLIST.md  FINAL_FIX_FUNCTION_CONSTRUCTOR.md  FINAL_FIX_SUMMARY.md  FINAL_SOLUTION_FILE_SEPARATION.md  FIX_ENV_LOADING.md  FIX_REPORT.md  IMMEDIATE_EXECUTION_REPORT.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PROJECT_OPTIMIZATION.md  QUICK_TEST.md  QUICK_TEST_GUIDE.md  README.md  REMOVE_ENV_DEPENDENCY.md  RUN_MODES_EXPLANATION.md  SCHEDULED_TASK_IMPLEMENTATION.md  (+39 more)
.github/: README.md
.github/workflows/: build-tauri.yml  ci.yml
__tests__/: setup.ts
__tests__/api/: upload.test.ts
__tests__/config/: app.test.ts
assets/: Dou_Yin_Dian_Shang_Luo_Pan-Cheng_Jiao_Fen_Xi-20260202-20260202_6cf6e862.xlsx
docs/: DEPLOYMENT.md
scripts/: build.bat  build.sh  check-env.sh  clean-symlinks.js  start.sh  test-build-env.sh  test-env-load.sh  test-env-simple.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page-backup.tsx  page-optimized.tsx.bak  page.tsx
tauri-dist/: package.json  server.js
(+100 files in other folders)
