[package]
name = "feishu-sync-tool"
version = "1.0.0"
description = "飞书表格数据同步管理工具"
authors = ["Feishu Sync Tool"]
license = "MIT"
repository = ""
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
